# fs25-farm-bridge

./: README.md  farm_bridge.py  pyproject.toml
.github/workflows/: farmsim-bridge.yml  publish.yml  release.yml
src/fs25_farm_bridge/: __init__.py  __main__.py  bridge.py  gportal_ftp.py
src/fs25_farm_bridge/src/fs25_farm_bridge/src/fs25_farm_bridge/: savegame_parser.py
